update-manager (1:0.146.2) UNRELEASED; urgency=low

  [ Michael Vogt ]
  *  data/glade/UpdateManager.ui, UpdateManager/UpdateManager.py:
    - improve wording of roaming warning, thanks to Alex Chiang
    - make the roaming warning label wrap
  * UpdateManager/UpdateManager.py:
    - fix crash in  _get_last_apt_get_update_text (LP: #712346)

  [ Julian Taylor ]
  * use dh_installman to install manpages
  * move do-release-upgrade manpage to update-manager-core (LP: #695186)

  [ Martin Pitt ]
  * debian/control: Update Breaks:/Conflicts: for the moved manpage.

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 01 Mar 2011 11:46:26 +0100

update-manager (1:0.146.1) natty; urgency=low

  [ Michael Vogt ]
  * merged lp:~evfool/update-manager/fix689034:
    - Some basic string fixes (lp:#689034), thanks to Robert Roth
  * UpdateManager/Core/roam.py:
    - add backend for roaming detection, thanks to Alex Chiang
    - display warning when on 3g and when roaming (fixes half of 
      LP: 323108)
  * merged lp:~thibault-lemaitre/ubuntu/natty/update-manager/from_pkg.isInstalled_to_pkg.is_installed
    that fixes a bunch of deprecated python-apt issues (many thanks!)

  [ Lionel Le Folgoc ]
  * UpdateManager/UpdateManager.py: try to reboot using consolekit if
    gnome-session isn't present (fixes rebooting on Xfce and LXDE, lp: #530161).

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 01 Mar 2011 08:55:53 +0100

update-manager (1:0.146) natty; urgency=low

  * DistUpgrade/DistUpgradeView*.py:
    - pass apt.Package object to the view instead of strings, this
      allows to show additional info on the packages (like summary
      or size)
  * DistUpgrade/DistUpgradeViewGtk.py:
    - check for libgtk2-perl for debconf support
  * AutoUpgradeTester/install_blacklist.cfg:
    - update blacklist for creating main-all images
  * UpdateManager/ReleaseNotesViewer.py:
    - use monospace font (LP: #153228)
  * DistUpgrade/DistUpgradeController.py: