@@ -6,6 +6,8 @@ update-manager (1:0.146.2) UNRELEASED; urgency=low
     - make the roaming warning label wrap
   * UpdateManager/UpdateManager.py:
     - fix crash in  _get_last_apt_get_update_text (LP: #712346)
+    - do not try to download changelogs if NM reports we are
+      disconnected (LP: #19372)
 
   [ Julian Taylor ]
   * use dh_installman to install manpages
